updated donation statistics
